Introduce Rabbitmq and implement a simple hello world

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: '2'
 services:
   web:
     build: .
-    command: "node /code/server.js"
-    links:
+    command: "node /code/hello-world.js"
+     depends_on: 
+     - message_broker
      - db
     ports:
      - "4444:8080"
@@ -14,3 +15,6 @@ services:
      - MONGODB_DBNAME= mydb
     volumes: 
      - './data:/data/db'
+
+  message_broker:
+    image: rabbitmq
