--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "amqplib": "^0.5.1",
     "express": "^4.13.3",
-	"mongodb": "^2.0.25"
+    "mongodb": "^2.0.25"
   }
 }
