--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "amqplib": "^0.5.1",
     "express": "^4.13.3",
     "mongodb": "^2.0.25"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
