--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,13 +1,15 @@
 version: '2'
 services:
   web:
-    build: .
-    command: ""
+    build: ..
+    command: "npm install -g mocha"
     depends_on: 
      - message_broker
      - db
     ports:
      - "4444:8080"
+    volumes:
+      - ..:/test
 
   db:
     image: mongo
