--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: generic
 dist: trusty
 sudo: required
 services:
-  - docker
-env:
+- docker
+env: 
 script:
-  - ./travis-build.sh
+- ./travis-build.sh
+before_install:
+- openssl aes-256-cbc -K $encrypted_0afed5a974a1_key -iv $encrypted_0afed5a974a1_iv
+  -in test-pubsub.json.enc -out credentials/test-pubsub.json -d
